# music-assistant-desktop-tv

./: .gitignore  README.md  launcher.py  pyproject.toml
.github/workflows/: build-release.yml  flatpak.yml
docs/superpowers/plans/: 2026-06-28-bigscreen-jukebox.md
docs/superpowers/specs/: 2026-06-28-bigscreen-jukebox-design.md
flatpak/: README.md  io.github.shreyasajj.MusicAssistantDesktopTv.desktop  io.github.shreyasajj.MusicAssistantDesktopTv.metainfo.xml  io.github.shreyasajj.MusicAssistantDesktopTv.yaml  requirements.txt
mockups/: index.html  lyrics.html  nowplaying.html  search.html  styles.css  visualizer-lines.html  visualizer-radial.html  visualizer.html
qml/: GuestOverlay.qml  Lyrics.qml  NowPlaying.qml  PlayerMenu.qml  Search.qml  SettingsView.qml  TopBar.qml  UpNextQueue.qml  Visualizer.qml  VizCanvas.qml  main.qml
ralph/: PROMPT.md  run.sh
scripts/: screenshots.py
src/bigscreen_jukebox/: __main__.py  audio_analysis.py  config.py  guest_server.py  ma_client.py
tests/: test_audio_analysis.py  test_config.py  test_guest_server.py  test_ma_client.py  test_smoke.py
