[project]
name = "bigscreen-jukebox"
version = "0.1.0"
description = "Bigscreen Jukebox — a fullscreen 10-foot TV client for Music Assistant"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "PySide6>=6.6",
  "qasync>=0.27",
  "music-assistant-client>=1.0",
  "aiohttp>=3.9",
  "qrcode[pil]>=7.4",
  "numpy>=1.26",
  "sounddevice>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-aiohttp>=1.0"]

[project.gui-scripts]
bigscreen-jukebox = "bigscreen_jukebox.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
